--- a/blog/templates/libros/listar.html
+++ b/blog/templates/libros/listar.html
@@ -1,14 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLOG</title>
+    <title>LIBROS - LISTAR</title>
 </head>
 <body>
-    <div>
-        <h3> HOLA SOY TU PRIMERA WEB </h3>
-        <a href="{% url 'libros:listar_libros' %}">IR A LISTAR LOS LIBROS</a>
-    </div>
+    <h1>ESTA PAGINA LISTA LOS LIBROS</h1>
+    <a href="{% url 'home' %}">VOVLER AL HOME</a>
 </body>
 </html>
