--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -8,7 +8,8 @@
 <body>
     <div>
         <h3> HOLA SOY TU PRIMERA WEB </h3>
-        <a href="{% url 'libros:listar_libros' %}">IR A LISTAR LOS LIBROS</a>
+        <a href="{% url 'libros:listar_libros' %}">Listar libros - VBF</a>
+        <a href="{% url 'libros:listar_libros_clase' %}">Listar libros - VBC</a>
     </div>
 </body>
 </html>
