--- a/blog/templates/libros/listar.html
+++ b/blog/templates/libros/listar.html
@@ -10,10 +10,13 @@
     <h1>ESTA PAGINA LISTA LOS LIBROS</h1>
     <div>
         {% for l in libros %}
+            <img src="{{l.imagen.url}}" alt="">
             <p>{{l.titulo}}</p>
             <p>{{l.autor}}</p>
             <p>{{l.fecha_publicacion}}</p>
+            <p><a href="{% url 'libros:detalle_libro' l.pk %}">VER MAS DETALLE</a></p>
         {% endfor %}
+        <br><br><br>
     </div>
 
     <a href="{% url 'home' %}">VOLVER AL HOME</a>
