--- a/blog/templates/libros/listar.html
+++ b/blog/templates/libros/listar.html
@@ -1,13 +1,14 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIBROS - LISTAR</title>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
-    <h1>ESTA PAGINA LISTA LOS LIBROS</h1>
+    <h1 class="titulos">ESTA PAGINA LISTA LOS LIBROS</h1>
     <div>
         {% for l in libros %}
             <img src="{{l.imagen.url}}" alt="">
