--- a/blog/templates/libros/listar_clase.html
+++ b/blog/templates/libros/listar_clase.html
@@ -1,13 +1,11 @@
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIBROS - LISTAR</title>
-</head>
-<body>
-    <h1>LISTA DE LIBROS CON LISTVIEW</h1>
+{% block titulo %}
+    LISTAR VBC
+{% endblock titulo %}
+
+{% block contenido %}
+    <h1>LISTA DE LIBROS CON VBC</h1>
     <div>
         {% for l in object_list %}
             <img src="{{l.imagen.url}}" alt="">
@@ -19,5 +17,5 @@
     </div>
 
     <a href="{% url 'home' %}">VOLVER AL HOME</a>
-</body>
-</html>
+
+{% endblock contenido %}
