--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,17 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLOG</title>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block titulo %}
+    HOME
+{% endblock titulo %}
+
+{% block contenido %}   
     <div>
-        <h3 class="titulos"> HOLA SOY TU PRIMERA WEB </h3>
+        <h4>HOME</h4>
         <a href="{% url 'libros:listar_libros' %}">Listar libros - VBF</a>
         <a href="{% url 'libros:listar_libros_clase' %}">Listar libros - VBC</a>
     </div>
-</body>
-</html>
+{% endblock contenido %}
