--- a/blog/templates/libros/listar.html
+++ b/blog/templates/libros/listar.html
@@ -8,13 +8,15 @@
     <h4>LISTAR LIBROS VBF</h4>
     <div>
         {% for l in libros %}
-            <img src="{{l.imagen.url}}" alt="">
+        <div class="menu">
+            <img src="{{l.imagen.url}}" alt="" width="150">
             <p>{{l.titulo}}</p>
             <p>{{l.autor}}</p>
             <p>{{l.fecha_publicacion}}</p>
             <p><a href="{% url 'libros:detalle_libro' l.pk %}">VER MAS DETALLE</a></p>
         {% endfor %}
         <br><br><br>
+    </div>
     </div>
 
     <a href="{% url 'home' %}">VOLVER AL HOME</a>
