--- a/blog/templates/libros/detalle.html
+++ b/blog/templates/libros/detalle.html
@@ -9,9 +9,10 @@
     <div>
         
             <img src="{{libro.imagen.url}}" alt="">
-            <p>{{libro.titulo}}</p>
-            <p>{{libro.autor}}</p>
-            <p>{{libro.fecha_publicacion}}</p>
+            <p><b>TITULO: </b>{{libro.titulo}}</p>
+            <p><b>ISBN: </b>{{libro.isbn}}</p>
+            <p><b>AUTOR: </b>{{libro.autor}}</p>
+            <p><b>FECHA DE PUBLICACION: </b>{{libro.fecha_publicacion}}</p>
             
         
     </div>
