arregladas urls de VBC

--- a/blog/templates/libros/detalle.html
+++ b/blog/templates/libros/detalle.html
@@ -17,6 +17,6 @@
         
     </div>
 
-    <a href="{% url 'libros:listar_libros' %}">VOLVER</a>
+    <a href="{% url 'libros:listar_libros' 'todos' %}">VOLVER</a>
 
 {% endblock contenido %}
