--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -15,6 +15,7 @@
             <li class="menu"><a href="{% url 'home' %}">HOME</a></li>
             <li class="menu"><a href="{% url 'libros:listar_libros' 'todos' %}">LIBROS</a></li>
             <li class="menu"><a href="{% url 'libros:crear_libro' %}">CREAR</a></li>
+            <li class="menu"><a href="{% url 'usuarios:registro_usuario' %}">REGISTRAR</a></li>
         </ul>
     </div>
 
